2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasurePlugin
		* styling for the AdvancedMeasureTool in the Option dialog added
		* I18N for english and german

2011-01-03 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.workbench.ui.FontChooser
		* sample text i18n -> ui.FontChooser.sampletext
		* possibilty to set the font size in the dialog introduced
			* The GUI code was already present in jbinit(), but the components
			  was not finaly added to the dialog.
			* Added a new showDialog() and constructor with a flag for showing
			  the fontsize components or not.

2011-01-03 Matthias Scholz <ms@jammerhund.de>
	* Added a new AdvancedMeasurePlugin in org.openjump.core.ui.plugin.tools
		- added AdvancedMeasureTool, MeasureLayerFinder, MeasurementStyle
		- can be activated in default-plugins.xml:
			"<plug-in>org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin</plug-in>"

2010-12-27 Matthias Scholz <ms@jammerhund.de>
	* Added some parts of org.openide.awt package from the NetBeans project
		- now we have a DropDownbutton and a DropDownToogleButton
		- this is a stripped down version of the original NB 6.9.1 source code,
		   so we do not need many additional JAR's
	* WorkbenchToolBar: added a addCursorTool() method for adding CursorTools
		with an own JToggleButton implementation such as the DropDownToogleButton

2010-12-14 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in IntersectPolygonLayersPlugIn. resetFeatureValuesToNaN
      method was resetting integer attribute values to non integer value
      Double.NaN. They are now set to null.

2010-12-12 mmichaud <michael.michaud@free.fr>
    * Fixed bug#3130723 : Layer Statistics and Feature Statistics now recurse 
      through GeometryCollection
    * LayerStatistic now returns exact mean values instead of their floor()
      equivalent for nbPoints, nbComponents and nbHoles

2010-12-11 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame